#205: Added objects and queries for Search Check Spelling Action Types