@@ -17,94 +17,75 @@
 package com.echothree.control.user.search.server.command;
 
 import com.echothree.control.user.search.common.form.GetSearchCheckSpellingActionTypeForm;
-import com.echothree.control.user.search.common.result.GetSearchCheckSpellingActionTypeResult;
 import com.echothree.control.user.search.common.result.SearchResultFactory;
-import com.echothree.model.control.core.common.ComponentVendors;
-import com.echothree.model.control.core.common.EntityTypes;
 import com.echothree.model.control.core.common.EventTypes;
-import com.echothree.model.control.core.server.logic.EntityInstanceLogic;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.search.server.control.SearchControl;
+import com.echothree.model.control.search.server.logic.SearchCheckSpellingActionTypeLogic;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
-import com.echothree.model.data.core.server.entity.EntityInstance;
 import com.echothree.model.data.search.server.entity.SearchCheckSpellingActionType;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.message.ExecutionErrors;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class GetSearchCheckSpellingActionTypeCommand
-        extends BaseSimpleCommand<GetSearchCheckSpellingActionTypeForm> {
-    
+        extends BaseSingleEntityCommand<SearchCheckSpellingActionType, GetSearchCheckSpellingActionTypeForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
-    
+
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.SearchCheckSpellingActionType.name(), SecurityRoles.Review.name())
-                        )))
-                )));
-        
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                new FieldDefinition("SearchCheckSpellingActionTypeName", FieldType.ENTITY_NAME, true, null, null),
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("SearchCheckSpellingActionTypeName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
                 new FieldDefinition("Key", FieldType.KEY, false, null, null),
                 new FieldDefinition("Guid", FieldType.GUID, false, null, null),
                 new FieldDefinition("Ulid", FieldType.ULID, false, null, null)
-                ));
+        );
     }
-    
+
     /** Creates a new instance of GetSearchCheckSpellingActionTypeCommand */
     public GetSearchCheckSpellingActionTypeCommand(UserVisitPK userVisitPK, GetSearchCheckSpellingActionTypeForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
-        GetSearchCheckSpellingActionTypeResult result = SearchResultFactory.getGetSearchCheckSpellingActionTypeResult();
-        String searchCheckSpellingActionTypeName = form.getSearchCheckSpellingActionTypeName();
-        var parameterCount = (searchCheckSpellingActionTypeName == null ? 0 : 1) + EntityInstanceLogic.getInstance().countPossibleEntitySpecs(form);
+    protected SearchCheckSpellingActionType getEntity() {
+        var searchCheckSpellingActionType = SearchCheckSpellingActionTypeLogic.getInstance().getSearchCheckSpellingActionTypeByUniversalSpec(this, form);
 
-        if(parameterCount == 1) {
-            var searchControl = Session.getModelController(SearchControl.class);
-            SearchCheckSpellingActionType searchCheckSpellingActionType = null;
-
-            if(searchCheckSpellingActionTypeName == null) {
-                var entityInstance = EntityInstanceLogic.getInstance().getEntityInstance(this, form, ComponentVendors.ECHOTHREE.name(),
-                        EntityTypes.SearchCheckSpellingActionType.name());
-                
-                if(!hasExecutionErrors()) {
-                    searchCheckSpellingActionType = searchControl.getSearchCheckSpellingActionTypeByEntityInstance(entityInstance);
-                }
-            } else {
-                searchCheckSpellingActionType = searchControl.getSearchCheckSpellingActionTypeByName(searchCheckSpellingActionTypeName);
-
-                if(searchCheckSpellingActionType == null) {
-                    addExecutionError(ExecutionErrors.UnknownSearchCheckSpellingActionTypeName.name(), searchCheckSpellingActionTypeName);
-                }
-            }
-
-            if(!hasExecutionErrors()) {
-                result.setSearchCheckSpellingActionType(searchControl.getSearchCheckSpellingActionTypeTransfer(getUserVisit(), searchCheckSpellingActionType));
-                sendEventUsingNames(searchCheckSpellingActionType.getPrimaryKey(), EventTypes.READ.name(), null, null, getPartyPK());
-            }
-        } else {
-            addExecutionError(ExecutionErrors.InvalidParameterCount.name());
+        if(searchCheckSpellingActionType != null) {
+            sendEventUsingNames(searchCheckSpellingActionType.getPrimaryKey(), EventTypes.READ.name(), null, null, getPartyPK());
         }
-        
+
+        return searchCheckSpellingActionType;
+    }
+
+    @Override
+    protected BaseResult getTransfer(SearchCheckSpellingActionType searchCheckSpellingActionType) {
+        var result = SearchResultFactory.getGetSearchCheckSpellingActionTypeResult();
+
+        if(searchCheckSpellingActionType != null) {
+            var searchControl = Session.getModelController(SearchControl.class);
+
+            result.setSearchCheckSpellingActionType(searchControl.getSearchCheckSpellingActionTypeTransfer(getUserVisit(), searchCheckSpellingActionType));
+        }
+
         return result;
     }
-    
+
 }
